# POGLIB

./: .gitlab-ci.yml  .gitmodules  AUTHORS  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT  README.md
.github/workflows/: clang-format-check.yml  cmake-multi-platform.yml
src/: CMakeLists.txt  pog.cpp  pog.h  pogXmlWriter.cpp  pogXmlWriter.h
test/: .gitignore  CMakeLists.txt  dotest.sh  setenv.sh  setenv.sh.model
test/input/empty_1/: empty_1.mch  input.pog
test/input/emptyseq_1/: emptyseq_1.mch  input.pog
test/output/reference/emptyseq_1/: output.pog
test/output/result/empty_1/: output.pog
test/tools/: CMakeLists.txt  loadpog.cpp
